color contrast issue fixed on challenge listing page

--- a/src/shared/components/challenge-listing/Sidebar/BucketSelector/style.scss
+++ b/src/shared/components/challenge-listing/Sidebar/BucketSelector/style.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   a {
-    color: $tc-gray-50;
+    color: $tc-gray-70;
     font-size: 13px;
     line-height: 30px;
   }
